# nautilus-statustracker

./: Cargo.toml
deployment/: Dockerfile  cronjob.yaml  kustomization.yaml  namespace.yaml  secret.yaml
sql/: 00_init.sql  10_base.sql
src/: main.rs
