[package]
name = "statustracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
scraper = "0.16"
